<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/black"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/hintEditText"
            android:inputType="number"
            android:textSize="20sp"
            android:autofillHints="" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/black"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/hintTextView"
            android:textSize="20sp" />
    </FrameLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        android:layout_weight="7">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_delete"
                style="@style/StyleLeftButton"
                android:textSize="24sp"
                android:text="@string/button_delete" />

            <Button
                android:id="@+id/button_leftPacket"
                style="@style/StyleCenterButton"
                android:text="@string/button_leftBracket" />

            <Button
                android:id="@+id/button_rightBracket"
                style="@style/StyleCenterButton"
                android:text="@string/button_rightBracket" />

            <Button
                android:id="@+id/button_divide"
                style="@style/StyleRightButton"
                android:text="@string/button_divide" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_7"
                style="@style/StyleLeftButton"
                android:text="@string/button_7" />

            <Button
                android:id="@+id/button_8"
                style="@style/StyleCenterButton"
                android:text="@string/button_8" />

            <Button
                android:id="@+id/button_9"
                style="@style/StyleCenterButton"
                android:text="@string/button_9" />

            <Button
                android:id="@+id/button_multiply"
                style="@style/StyleRightButton"
                android:text="@string/button_multiply" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_4"
                style="@style/StyleLeftButton"
                android:text="@string/button_4" />

            <Button
                android:id="@+id/button_5"
                style="@style/StyleCenterButton"
                android:text="@string/button_5" />

            <Button
                android:id="@+id/button_6"
                style="@style/StyleCenterButton"
                android:text="@string/button_6" />

            <Button
                android:id="@+id/button_minus"
                style="@style/StyleRightButton"
                android:text="@string/button_minus" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_1"
                style="@style/StyleLeftButton"
                android:text="@string/button_1" />

            <Button
                android:id="@+id/button_2"
                style="@style/StyleCenterButton"
                android:text="@string/button_2" />

            <Button
                android:id="@+id/button_3"
                style="@style/StyleCenterButton"
                android:text="@string/button_3" />

            <Button
                android:id="@+id/button_plus"
                style="@style/StyleRightButton"
                android:text="@string/button_plus" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_0"
                style="@style/StyleLeftButton"
                android:text="@string/button_0" />

            <Button
                android:id="@+id/button_point"
                style="@style/StyleCenterButton"
                android:text="@string/button_point" />

            <Button
                android:id="@+id/button_percent"
                style="@style/StyleCenterButton"
                android:text="@string/button_percent" />

            <Button
                android:id="@+id/button_equals"
                style="@style/StyleRightButton"
                android:text="@string/button_equals" />
        </TableRow>

    </TableLayout>
</LinearLayout>